# telkomathon-5

./: .env.prod.example  .gitignore  AGENTS.md  PROGRESS.md  docker-compose.prod.yml  docker-compose.yml
be-fastapi/: .dockerignore  .env.example  AGENTS.md  Dockerfile  pyproject.toml
be-fastapi/alembic/: env.py
be-fastapi/alembic/versions/: 0001_initial.py  0002_revision_messages.py  0003_revision_message_section_statuses.py  0004_syllabus_gen_meta.py  0005_design_session_ai_preview.py  8d2c7f6b1a1f_add_design_sessions_table.py  8f1629c83c67_merge_design_sessions_and_embedding_.py  a1b2c3d4e5f6_change_embedding_dimension_3072.py  a7b8c9d0e1f2_add_participant_name_to_personalization.py  b8c9d0e1f2a3_add_revision_index_to_personalization.py  c1d2e3f4a5b6_add_bulk_session_id_to_personalization.py  c9f3f2788f8a_add_finalized_syllabus_snapshot_fields.py  d4a7e8f91b2c_add_owner_history_and_module_decompositions.py  e2f3a4b5c6d7_add_career_roadmap_results.py  e48cdb1a522e_initial_schema.py  f1a2b3c4d5e6_add_users_table_and_owner_id_columns.py  f2716b0ee6d0_initial_schema.py
be-fastapi/app/: config.py  database.py  dependencies.py  exceptions.py  main.py  response.py
be-fastapi/app/ai/: client.py  constants.py  embeddings.py  llm.py  rag.py
be-fastapi/app/utils/: chunking.py  docx_parser.py  file_parser.py  ocr.py  pdf_parser.py  pptx_parser.py
be-fastapi/tests/: conftest.py
be-fastapi/tests/features/: test_auth_service.py  test_chat_service.py  test_design_sessions_service.py  test_documents_service.py  test_export_service.py  test_history_service.py  (+6 more)
(+161 files in other folders)
